cabal-version: 3.6
name: hasura-prelude
version: 0.1.0.0

library
    hs-source-dirs: src
    build-depends:
      aeson,
      aeson-casing,
      autodocodec,
      base,
      base64-bytestring,
      bytestring,
      containers,
      deepseq,
      hashable,
      insert-ordered-containers,
      lens,
      mtl,
      nonempty-containers,
      pretty-simple,
      text,
      time,
      transformers,
      transformers-base,
      unordered-containers,
      witherable
    default-language: Haskell2010
    exposed-modules:
      Data.Time.Clock.Units
      Hasura.Prelude
    ghc-options:
      -- Taken from https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
      -Weverything
      -Wno-missing-exported-signatures
      -Wno-missing-import-lists
      -Wno-missed-specialisations
      -Wno-all-missed-specialisations
      -Wno-unsafe
      -Wno-safe
      -Wno-missing-local-signatures
      -Wno-monomorphism-restriction
      -Wno-missing-kind-signatures
      -Wno-missing-safe-haskell-mode
      -- We want these warnings, but the code doesn't satisfy them yet:
      -Wno-missing-deriving-strategies
      -Wno-redundant-constraints
      -Wno-unused-imports
