cabal-version:      3.0
name:               pg-client
version:            0.1.0
homepage:           https://github.com/hasura/pg-client-hs
bug-reports:        https://github.com/hasura/pg-client-hs/issues
author:             Vamshi Surabhi
maintainer:         vamshi@hasura.io
copyright:          2017 Hasura Systems Private Limited
license:            Apache-2.0
license-file:       LICENSE
category:           Database
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==8.10.7 || ==9.2.2

source-repository head
  type:     git
  location: https://github.com/hasura/pg-client-hs

common common-all
  ghc-options:
    -foptimal-applicative-do
    -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
    -- This is just to keep compile-times in check and might be adjusted later (See mono #2610):
    -fmax-simplifier-iterations=2
    -- Insisting on export lists might help with compile times, and help to document modules:
    -Wmissing-export-lists

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost

library
  import:          common-all
  hs-source-dirs:  src
  exposed-modules:
    Control.Concurrent.Interrupt
    Database.PG.Query
    Database.PG.Query.Class
    Database.PG.Query.Connection
    Database.PG.Query.Listen
    Database.PG.Query.Pool
    Database.PG.Query.PTI
    Database.PG.Query.Transaction

  build-depends:
    , aeson              >=1.0
    , aeson-casing       >=0.1
    , async              >=2
    , attoparsec         >=0.13
    , base               >=4.7
    , bytestring         >=0.10
    , ekg-core           >=0.1
    , hashable           >=1.2
    , hashtables         >=1.2
    , mmorph             >=1.1
    , monad-control      >=1.0
    , mtl                >=2.2
    , postgresql-binary  >=0.12
    , postgresql-libpq   >=0.9
    , resource-pool      >=0.2
    , retry              >=0.9
    , safe-exceptions    >=0.1
    , scientific         >=0.3
    , template-haskell   >=2.11
    , text               >=1.2
    , text-builder       >=0.6
    , time               >=1.6
    , transformers       >=0.5
    , transformers-base  >=0.4
    , uuid               >=1.3
    , vector             >=0.12

test-suite pg-client-test
  import:         common-all
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  main-is:        Spec.hs
  other-modules:
    Interrupt
    Timeout
    Jsonb

  build-depends:
    , async
    , base
    , bytestring
    , hspec
    , pg-client
    , safe-exceptions
    , time
    , transformers
    , aeson
    , mtl
    , postgresql-libpq

benchmark pg-client-bench
  import:         common-all
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , base
    , bytestring
    , file-embed
    , hasql
    , hasql-pool ==0.5.2.2
    , hasql-transaction
    , pg-client
    , tasty-bench
    , text
    , transformers
