cabal-version:      3.6
name:               pg-client
version:            0.1.0
homepage:           https://github.com/hasura/graphql-engine
bug-reports:        https://github.com/hasura/graphql-engine/issues
author:             Vamshi Surabhi
maintainer:         vamshi@hasura.io
copyright:          2017 Hasura Systems Private Limited
license:            Apache-2.0
license-file:       LICENSE
category:           Database
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==8.10.7 || ==9.2.2

source-repository head
  type:     git
  location: https://github.com/hasura/graphql-engine

common common-all
  ghc-options:
    -foptimal-applicative-do
    -- This is just to keep compile-times in check and might be adjusted later (See mono #2610):
    -fmax-simplifier-iterations=2
    -- Taken from https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -- We want these warnings, but the code doesn't satisfy them yet:
    -Wno-missing-deriving-strategies

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost

library
  import:          common-all
  hs-source-dirs:  src
  exposed-modules:
    Control.Concurrent.Interrupt
    Database.PG.Query
    Database.PG.Query.Class
    Database.PG.Query.Connection
    Database.PG.Query.Listen
    Database.PG.Query.Pool
    Database.PG.Query.PTI
    Database.PG.Query.Transaction

  build-depends:
    , aeson
    , aeson-casing
    , async
    , base
    , bytestring
    , ekg-core
    , ekg-prometheus
    , hashable
    , hashtables
    , mmorph
    , monad-control
    , mtl
    , postgres-options
    , postgresql-binary
    , postgresql-libpq
    , resource-pool
    , retry
    , safe-exceptions
    , scientific
    , template-haskell
    , text
    , text-builder
    , time
    , transformers
    , transformers-base
    , uuid
    , vector

test-suite pg-client-tests
  import:         common-all
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  main-is:        Spec.hs
  other-modules:
    Interrupt
    Timeout
    Jsonb

  build-depends:
    , async
    , base
    , bytestring
    , hspec
    , pg-client
    , safe-exceptions
    , time
    , transformers
    , aeson
    , mtl
    , postgresql-libpq

benchmark pg-client-bench
  import:         common-all
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , file-embed
    , hasql
    , hasql-pool
    , hasql-transaction
    , pg-client
    , tasty-bench
    , text
    , transformers
