name:                resource-pool
version:             0.2.3.2
synopsis:            A high-performance striped resource pooling implementation
description:
  A high-performance striped pooling abstraction for managing
  flexibly-sized collections of resources such as database
  connections.

homepage:            http://github.com/bos/pool
license:             BSD3
license-file:        LICENSE
author:              Bryan O'Sullivan <bos@serpentine.com>
maintainer:          Bryan O'Sullivan <bos@serpentine.com>,
                     Bas van Dijk <v.dijk.bas@gmail.com>
copyright:           Copyright 2011 MailRank, Inc.
category:            Data, Database, Network
build-type:          Simple
extra-source-files:
  README.markdown

cabal-version:       >=1.8

flag developer
  description: operate in developer mode
  default: False
  manual: True

library
  exposed-modules:
    Data.Pool

  build-depends:
    base >= 4.4 && < 5,
    hashable,
    monad-control >= 0.2.0.1,
    transformers,
    transformers-base >= 0.4,
    stm >= 2.3,
    time,
    vector >= 0.7

  if flag(developer)
    ghc-options: -Werror
    ghc-prof-options: -auto-all
    cpp-options: -DASSERTS -DDEBUG

  ghc-options: -Wall

test-suite resource-pool-tests
  ghc-options: -threaded -rtsopts
  type: exitcode-stdio-1.0
  build-depends:
      base
    , hspec
    , resource-pool
  hs-source-dirs: test
  main-is: Main.hs

source-repository head
  type:     git
  location: http://github.com/bos/pool

source-repository head
  type:     mercurial
  location: http://bitbucket.org/bos/pool
