cabal-version: 2.2
name: test-harness
version: 0.1.0.0

library
  build-depends:
    , Spock-core
    , aeson
    , aeson-pretty
    , async
    , attoparsec
    , base
    , bytestring
    , conduit
    , containers
    , data-has
    , dc-api
    , directory
    , ekg-core
    , fast-logger
    , graphql-engine
    , graphql-parser
    , haskell-src-meta
    , hasura-prelude
    , hedgehog
    , hspec
    , hspec-core
    , http-conduit
    , http-types
    , insert-ordered-containers
    , lens
    , lens-aeson
    , libyaml
    , managed
    , morpheus-graphql
    , mtl
    , mysql-simple
    , network
    , odbc
    , openapi3
    , parsec
    , pg-client
    , postgres-options
    , postgresql-simple
    , pretty-show
    , pretty-simple
    , process
    , refined
    , resourcet
    , safe
    , safe-exceptions
    , servant-server
    , sop-core
    , stm
    , string-interpolate
    , template-haskell
    , text
    , th-lift
    , th-lift-instances
    , time
    , typed-process
    , unordered-containers
    , uuid
    , vector
    , warp
    , websockets
    , yaml

  hs-source-dirs: src
  default-language: Haskell2010

  default-extensions:
    BangPatterns
    BlockArguments
    DeriveLift
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeSynonymInstances

  ghc-options: -Wall -Werror

  exposed-modules:
    Harness.Backend.BigQuery
    Harness.Backend.Citus
    Harness.Backend.Cockroach
    Harness.Backend.DataConnector.Chinook
    Harness.Backend.DataConnector.Chinook.Reference
    Harness.Backend.DataConnector.Chinook.Sqlite
    Harness.Backend.DataConnector.Mock
    Harness.Backend.DataConnector.Mock.Server
    Harness.Backend.DataConnector.Sqlite
    Harness.Backend.Postgres
    Harness.Backend.Sqlserver
    Harness.Constants
    Harness.Env
    Harness.Exceptions
    Harness.GraphqlEngine
    Harness.Http
    Harness.Logging
    Harness.Logging.Messages
    Harness.PytestPortedCompat
    Harness.Quoter.Graphql
    Harness.Quoter.Yaml
    Harness.Quoter.Yaml.InterpolateYaml
    Harness.RemoteServer
    Harness.Services.Composed
    Harness.Services.GraphqlEngine
    Harness.Services.Postgres
    Harness.Subscriptions
    Harness.Test.BackendType
    Harness.Test.CustomOptions
    Harness.Test.Fixture
    Harness.Test.FixtureName
    Harness.Test.Introspection
    Harness.Test.Permissions
    Harness.Test.Schema
    Harness.Test.SchemaName
    Harness.Test.SetupAction
    Harness.Test.TestResource
    Harness.TestEnvironment
    Harness.Webhook
    Harness.Yaml
