cabal-version: 2.2
name: test-harness
version: 0.1.0.0

library
  build-depends:
    , Spock-core
    , aeson
    , aeson-pretty
    , aeson-qq
    , async
    , attoparsec
    , base
    , bytestring
    , case-insensitive
    , conduit
    , containers
    , data-has
    , dc-api
    , directory
    , ekg-core
    , fast-logger
    , graphql-engine
    , graphql-parser
    , haskell-src-meta
    , hasura-base
    , hasura-extras
    , hasura-prelude
    , hedgehog
    , hspec
    , hspec-core
    , http-client
    , http-conduit
    , http-types
    , insert-ordered-containers
    , lens
    , lens-aeson
    , libyaml
    , lifted-base
    , managed
    , morpheus-graphql
    , morpheus-graphql-server
    , mtl
    , network
    , odbc
    , openapi3
    , parsec
    , pg-client
    , postgres-options
    , postgresql-simple
    , pretty-show
    , pretty-simple
    , process
    , refined
    , resource-pool
    , resourcet
    , safe
    , safe-exceptions
    , servant-server
    , servant-client
    , sop-core
    , stm
    , string-interpolate
    , template-haskell
    , text
    , th-lift
    , th-lift-instances
    , these
    , time
    , typed-process
    , unordered-containers
    , uuid
    , vector
    , warp
    , websockets
    , yaml
    , regex-tdfa

  hs-source-dirs: src
  default-language: Haskell2010

  default-extensions:
    BangPatterns
    BlockArguments
    DeriveLift
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeSynonymInstances

  ghc-options:
    -Werror
    -- Taken from https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -- We want these warnings, but the code doesn't satisfy them yet:
    -Wno-missing-deriving-strategies
    -Wno-unused-packages
    -Wno-redundant-constraints

  exposed-modules:
    Harness.Backend.BigQuery
    Harness.Backend.Citus
    Harness.Backend.Cockroach
    Harness.Backend.DataConnector.Chinook
    Harness.Backend.DataConnector.Chinook.Reference
    Harness.Backend.DataConnector.Chinook.Sqlite
    Harness.Backend.DataConnector.Mock
    Harness.Backend.DataConnector.Mock.Server
    Harness.Backend.DataConnector.Sqlite
    Harness.Backend.Postgres
    Harness.Backend.Sqlserver
    Harness.Constants
    Harness.DataConnectorAgent
    Harness.Env
    Harness.Exceptions
    Harness.GlobalTestEnvironment
    Harness.GraphqlEngine
    Harness.Http
    Harness.Logging
    Harness.Logging.Messages
    Harness.Permissions
    Harness.PytestPortedCompat
    Harness.Quoter.Graphql
    Harness.Quoter.Yaml
    Harness.Quoter.Yaml.InterpolateYaml
    Harness.RemoteServer
    Harness.Schema
    Harness.Schema.LogicalModel
    Harness.Schema.Name
    Harness.Schema.NativeQuery
    Harness.Schema.StoredProcedure
    Harness.Schema.Table
    Harness.Services.Composed
    Harness.Services.Database.Postgres
    Harness.Services.ExternalProcess.GraphqlEngine
    Harness.Services.GraphqlEngine
    Harness.Services.GraphqlEngine.API
    Harness.Services.Permissions.Table.Metadata
    Harness.Services.Permissions.Table.Types
    Harness.Services.Permissions.Table.Postgres
    Harness.Services.Schema
    Harness.Services.Source.Postgres
    Harness.Subscriptions
    Harness.Test.BackendType
    Harness.Test.CustomOptions
    Harness.Test.Fixture
    Harness.Test.FixtureName
    Harness.Test.Introspection
    Harness.Test.Protocol
    Harness.Test.ScalarType
    Harness.Test.SetupAction
    Harness.Test.TestResource
    Harness.TestEnvironment
    Harness.UniqueTestId
    Harness.WebSockets
    Harness.Webhook
    Harness.Yaml

  other-modules:
    Harness.Permissions.Metadata
    Harness.Permissions.Types
