[package]
name = "compatibility"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
metadata-resolve = { path = "../metadata-resolve" }
open-dds = { path = "../open-dds" }
opendds-derive = { path = "../utils/opendds-derive" }

anyhow = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
  "serde_json",          # used by opendds-derive
  "serde_path_to_error", # used by opendds-derive
]


[lints]
workspace = true
