[package]
name = "compatibility"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
jsonpath = { path = "../utils/jsonpath" }
open-dds = { path = "../open-dds" }
opendds-derive = { path = "../utils/opendds-derive" }

chrono = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
  "jsonpath",            # used by opendds-derive
  "serde_json",          # used by opendds-derive
  "serde_path_to_error", # used by opendds-derive
]


[lints]
workspace = true
