[package]
name = "custom-connector"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
bench = false

[[bin]]
name = "custom-connector"
path = "src/main.rs"
bench = false

[dependencies]
axum-ext = { path = "../utils/axum-ext" }

anyhow = { workspace = true }
axum = { workspace = true }
env_logger = { workspace = true }
indexmap = { workspace = true }
ndc-models = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
