[package]
name = "custom-connector"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
bench = false

[[bin]]
name = "custom-connector"
path = "src/main.rs"
bench = false

[dependencies]
axum-ext = { path = "../utils/axum-ext" }

anyhow = { workspace = true }
axum = { workspace = true }
datafusion = { workspace = true }
env_logger = { workspace = true }
indexmap = { workspace = true }
iso8601 = { workspace = true }
itertools = { workspace = true }
ndc-models = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
serde_arrow = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
